[ + ] Pettier, [ Fix ] AboutPage Hero overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,9 +7,17 @@ body{
 }
 
 /* Mobile (md) */
-@media only screen and (max-width: 720px) {
+@media only screen and (min-width: 1025px) and (max-width: 1500px) {
+  h1{
+    font-size: 3.5rem !important;
+  }
   p {
     font-size: 0.75rem !important; /*0.9*/
+  }
+}
+@media only screen and (max-width: 1024px) {
+  h1{
+    font-size: 2.5rem !important;
   }
 }
 
